--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,30 @@ services:
       - ~/.pg/pg_data/django:/var/lib/postgresql/data
     env_file:
       - .env
+  DjangoProject:
+    build:
+      dockerfile: Dockerfile
+      context: .
+    image: django_docker:latest
+    container_name: django_docker
+    depends_on:
+      - db
+    volumes:
+      - static_volume:/django/static
+      - media_volume:/django/media
+    env_file:
+      - .env
+    command: >
+      bash -c "./manage.py collectstatic --noinput && ./manage.py migrate  && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
+
+
+
+
+
+
+
+
+
 
     restart: always
     environment:
