--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,6 +5,7 @@ upstream DjangoProject {
 server {
 
     listen 80;
+    client_max_body_size 4G;
 
     location / {
         include proxy_params;
