--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream DjangoProject {
-    server DjangoProject:8000;
+upstream django_project {
+    server django_project:8000;
 }
 
 server {
@@ -9,7 +9,7 @@ server {
 
     location / {
         include proxy_params;
-        proxy_pass http://DjangoProject;
+        proxy_pass http://django_project;
     }
 
     location /static/ {
