--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ Pillow==9.5.0
 sqlparse==0.4.4
 psycopg2-binary==2.9.5
 gunicorn~=20.1.0
-python-dotenv
+python-dotenv~=1.0.0
 easy_thumbnails
+
+tqdm~=4.65.0
