--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-#pip install -r requirements.txt
-# add FOLDER: media,  image
 asgiref==3.6.0
+data==0.4
+decorator==5.1.1
 Django==4.1
+easy-thumbnails==2.8.5
+funcsigs==1.0.2
+gunicorn==20.1.0
+patool==1.12
 Pillow==9.5.0
-sqlparse==0.4.4
 psycopg2-binary==2.9.5
-gunicorn~=20.1.0
-python-dotenv~=1.0.0
-easy_thumbnails
-
-tqdm~=4.65.0
-data~=0.4
+python-dotenv==1.0.0
+six==1.16.0
+sqlparse==0.4.4
+tqdm==4.65.0
