--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+env:
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
 jobs:
   build:
