--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,8 +5,7 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-env:
-  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+
 
 jobs:
   build:
@@ -29,4 +28,5 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        echo "SECRET_KEY = 'django-insecure-dummy-secret'" > ./proj/secrets.py
         python manage.py test
