--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,6 +11,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      
     strategy:
       max-parallel: 4
       matrix:
@@ -28,5 +31,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        echo "SECRET_KEY = 'django-insecure-dummy-secret'" > ./proj/secrets.py
         python manage.py test
