--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   postgres_db:
     image: postgres
-    container_name: postgres_django
+    container_name: postgres_db
     volumes:
       - ~/.pg/pg_data/django:/var/lib/postgresql/data
     env_file:
@@ -22,7 +22,7 @@ services:
     env_file:
       - .env
     command: >
-      bash -c "python manage.py collectstatic --noinput && python manage.py migrate  && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
+      bash -c "python ./manage.py collectstatic --noinput && ./python manage.py migrate  && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
 
   nginx:
     build:
@@ -34,7 +34,7 @@ services:
       - static_volume:/django/static
       - media_volume:/django/media
     depends_on:
-      - django_project
+      - postgres_db
     ports:
       - "${NGINX_EXTERNAL_PORT}:80"
 volumes:
