--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - ~/.pg/pg_data/django:/var/lib/postgresql/data
     env_file:
       - .env
+    ports:
+      - "5432:5432"
   django_project:
     build:
       dockerfile: Dockerfile
