--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - .env
     ports:
       - "5432:5432"
+    restart: "always"
   django_project:
     build:
       dockerfile: Dockerfile
@@ -25,7 +26,7 @@ services:
       - .env
     command: >
       bash -c "./manage.py collectstatic --noinput && ./manage.py migrate  && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
-
+    restart: "always"
   nginx:
     build:
       dockerfile: ./Dockerfile
@@ -39,6 +40,7 @@ services:
       - postgres_db
     ports:
       - "${NGINX_EXTERNAL_PORT}:80"
+    restart: "always"
 volumes:
   static_volume:
   media_volume:
