--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - ~/.pg/pg_data/django:/var/lib/postgresql/data
     env_file:
       - .env
+    ports:
+      - "5432:5432"
   django_project:
     build:
       dockerfile: Dockerfile
@@ -22,7 +24,7 @@ services:
     env_file:
       - .env
     command: >
-      bash -c "./manage.py collectstatic --noinput && ./manage.py migrate  && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
+      bash -c "./manage.py collectstatic --noinput && ./manage.py makemigrations && ./manage.py migrate  && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
 
   nginx:
     build:
