--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,12 @@ version: '3.9'
 
 services:
   postgres_db:
-    image: postgres
+    image: postgres:15
     container_name: postgres_db
     volumes:
       - ~/.pg/pg_data/django:/var/lib/postgresql/data
     env_file:
       - .env
-    ports:
-      - "5432:5432"
     restart: always
   django_project:
     build:
@@ -21,7 +19,7 @@ services:
       - postgres_db
     volumes:
       - static_volume:/django/static
-      - media_volume:/django/media
+      - ~/media:/django/media
     env_file:
       - .env
     command: >
