--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,11 @@ data==0.4
 decorator==5.1.1
 Django==4.1
 django-crispy-forms==2.0
+dnspython==2.4.2
 easy-thumbnails==2.8.5
+eventlet==0.33.3
 funcsigs==1.0.2
+greenlet==3.0.1
 gunicorn==20.1.0
 kombu==5.3.2
 patool==1.12
