--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,3 +1,5 @@
 FROM jwilder/nginx-proxy:1.2
 
 COPY default_location /etc/nginx/vhost.d/default_location
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d
