--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -5,6 +5,5 @@ RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/conf.d
 
 RUN { \
-      echo 'server_tokens off;'; \
-      echo 'client_max_body_size 100m;'; \
+      echo 'client_max_body_size 1G;'; \
     } > /etc/nginx/conf.d/nginx.conf
