--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     build: .
     volumes:
       - ./:/app
+      - static_volume:/django/static
+      - media_volume:/django/media
     depends_on:
       - redis
       - django_project
