--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     depends_on:
       - postgres_db
     volumes:
-      - ~/.pg/gjango/static_volume:/django/static
-      - ~/.pg/gjango/media_volume:/django/media
+      - ~/django/static_volume:/django/static
+      - ~/django/media_volume:/django/media
     env_file:
       - .env
     environment:
@@ -41,9 +41,9 @@ services:
     restart: always
     build: .
     volumes:
-      - ~/.pg/gjango/:/app
-      - ~/.pg/gjango/static_volume:/django/static
-      - ~/.pg/gjango/media_volume:/django/media
+      - ~/django/:/app
+      - ~/django/static_volume:/django/static
+      - ~/django/media_volume:/django/media
     depends_on:
       - redis
       - django_project
@@ -56,8 +56,8 @@ services:
     container_name: nginx_for_django
     image: nginx_for_django
     volumes:
-      - ~/.pg/gjango/static_volume:/django/static
-      - ~/.pg/gjango/media_volume:/django/media
+      - ~/django/static_volume:/django/static
+      - ~/django/media_volume:/django/media
       - certs:/etc/nginx/certs
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
@@ -71,18 +71,16 @@ services:
 
     restart: always
 
-#  acme_companion:
-#    image: nginxproxy/acme-companion:2.2
-#    container_name: acme_companion
-#    volumes_from:
-#      - nginx
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock:ro
-#      - acme:/etc/acme.sh
+  acme_companion:
+    image: nginxproxy/acme-companion:2.2
+    container_name: acme_companion
+    volumes_from:
+      - nginx
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - acme:/etc/acme.sh
 
 volumes:
-  static_volume:
-  media_volume:
   certs:
   vhost:
   html:
