--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-amqp
-asgiref==3.6.0
+amqp==5.2.0
+asgiref==3.8.1
 async-timeout==4.0.3
 billiard==4.1.0
 celery==5.3.4
@@ -11,8 +11,9 @@ coverage==7.3.2
 crispy-bootstrap4==2022.1
 data==0.4
 decorator==5.1.1
-Django
+Django==5.0.6
 django-crispy-forms==2.0
+djangorestframework==3.15.1
 dnspython==2.4.2
 easy-thumbnails==2.8.5
 eventlet==0.33.3
@@ -21,16 +22,16 @@ greenlet==3.0.1
 gunicorn==20.1.0
 kombu==5.3.2
 patool==1.12
-Pillow==10.0.0
+pillow==10.3.0
 prompt-toolkit==3.0.39
-psycopg2-binary==2.9.5
+psycopg2-binary==2.9.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 redis==5.0.1
 reportlab==4.0.4
+setuptools==70.0.0
 six==1.16.0
-sqlparse==0.4.4
-tqdm==4.65.0
+sqlparse==0.5.0
 tzdata==2023.3
 vine==5.0.0
 wcwidth==0.2.8
