--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,10 +1,10 @@
 name: Django CI
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [pull_request]
+#  push:
+#    branches: [ "master" ]
+#  pull_request:
+#    branches: [ "master" ]
 
 
 jobs:
