--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,7 +1,11 @@
 name: Django CI
-run-name: ${{ github.actor }} is testing Github Actions
 
-on: [ pull_request ]
+on: [pull_request]
+#  push:
+#    branches: [ "master" ]
+#  pull_request:
+#    branches: [ "master" ]
+
 
 jobs:
   build:
@@ -13,25 +17,21 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ '3.11', '3.12' ]
+        python-version: ['3.11', '3.12']
 
     steps:
-
-
-
-      - name: Check out repository code
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run Tests
-        run: |
-          export SECRET_KEY="0-42!#@*6jqo)lv^+@-+&(-@kjke@xzk%)1!w)vz-1uwk71p)="
-          python manage.py test
-   
-
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run Tests
+      run: |
+        echo "SECRET_KEY = 'django-insecure-dummy-secret'" > ./proj/.env
+        python manage.py test
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
