--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,7 +31,9 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        echo "SECRET_KEY = 'django-insecure-dummy-secret'" > ./proj/.env
+        export SECRET_KEY="0-42!#@*6jqo)lv^+@-+&(-@kjke@xzk%)1!w)vz-1uwk71p)="
+
+        
         python manage.py test
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
