--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,16 @@ sqlparse==0.5.0
 tzdata==2023.3
 vine==5.0.0
 wcwidth==0.2.8
+
+openpyxl~=3.1.2
+typing_extensions~=4.10.0
+olefile~=0.46
+idna~=3.3
+cryptography~=3.4.8
+pip~=24.0
+keyring~=23.5.0
+requests~=2.25.1
+colorama~=0.4.4
+PyYAML~=5.4.1
+zipp~=1.0.0
+pytz~=2022.1
