--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,13 @@ django-crispy-forms==2.0
 djangorestframework==3.15.1
 dnspython==2.4.2
 easy-thumbnails==2.8.5
+et-xmlfile==1.1.0
 eventlet==0.33.3
 funcsigs==1.0.2
 greenlet==3.0.1
 gunicorn==20.1.0
 kombu==5.3.2
+openpyxl==3.1.2
 patool==1.12
 pillow==10.3.0
 prompt-toolkit==3.0.39
@@ -29,22 +31,9 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 redis==5.0.1
 reportlab==4.0.4
-setuptools==70.0.0
 six==1.16.0
 sqlparse==0.5.0
+typing_extensions==4.12.0
 tzdata==2023.3
 vine==5.0.0
 wcwidth==0.2.8
-
-openpyxl~=3.1.2
-typing_extensions~=4.10.0
-olefile~=0.46
-idna~=3.3
-cryptography~=3.4.8
-pip~=24.0
-keyring~=23.5.0
-requests~=2.25.1
-colorama~=0.4.4
-PyYAML~=5.4.1
-zipp~=1.0.0
-pytz~=2022.1
