--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3.9'
 
 services:
   redis:
+    container_name: redis_container
     image: redis
     restart: always
+    command: redis-server
     ports:
       - "6379:6379"
 
@@ -34,6 +36,7 @@ services:
     restart: always
 
   worker:
+    container_name: celery_worker
     restart: always
     build: .
     volumes:
