--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.9'
+version: '2'
 
 services:
   redis:
-    container_name: redis_container
     image: redis
     restart: always
-    command: redis-server
     ports:
       - "6379:6379"
 
@@ -31,16 +29,21 @@ services:
       - media_volume:/django/media
     env_file:
       - .env
+    environment:
+      - VIRTUAL_HOST=${ALLOWED_HOST}
+      - LETSENCRYPT_HOST=${ALLOWED_HOST}
+
     command: >
       bash -c "./manage.py collectstatic --noinput && ./manage.py makemigrations && ./manage.py migrate  && ./manage.py add_price && gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
+    
+
     restart: always
 
   worker:
-    container_name: celery_worker
     restart: always
     build: .
     volumes:
-      - ./:/app
+      - /:/app
       - static_volume:/django/static
       - media_volume:/django/media
     depends_on:
@@ -57,13 +60,32 @@ services:
     volumes:
       - static_volume:/django/static
       - media_volume:/django/media
+      - certs:/etc/nginx/certs
+      - vhost:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+
     depends_on:
       - postgres_db
     ports:
       - "${NGINX_EXTERNAL_PORT}:80"
+      - "${NGINX_EXTERNAL_SSL_PORT}:443"
+
     restart: always
 
+  acme_companion:
+    image: nginxproxy/acme-companion:2.2
+    container_name: acme_companion
+    volumes_from:
+      - nginx
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - acme:/etc/acme.sh
 
 volumes:
   static_volume:
   media_volume:
+  certs:
+  vhost:
+  html:
+  acme:
