add     "phonenumber_field",

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 amqp==5.2.0
 asgiref==3.8.1
 async-timeout==4.0.3
+attrs==23.2.0
 billiard==4.1.0
 celery==5.3.4
+certifi==2024.7.4
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -13,6 +15,7 @@ data==0.4
 decorator==5.1.1
 Django==5.0.6
 django-crispy-forms==2.0
+django-phonenumber-field==8.0.0
 djangorestframework==3.15.1
 dnspython==2.4.2
 easy-thumbnails==2.8.5
@@ -21,19 +24,33 @@ eventlet==0.33.3
 funcsigs==1.0.2
 greenlet==3.0.1
 gunicorn==22.0.0
+h11==0.14.0
+idna==3.7
 kombu==5.3.2
 openpyxl==3.1.2
+outcome==1.3.0.post0
+packaging==24.1
 patool==1.12
+phonenumbers==8.13.40
 pillow==10.3.0
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 redis==5.0.1
 reportlab==4.0.4
+selenium==4.22.0
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.0
+trio==0.26.0
+trio-websocket==0.11.1
 typing_extensions==4.12.0
 tzdata==2023.3
+urllib3==2.2.2
 vine==5.0.0
 wcwidth==0.2.8
+websocket-client==1.8.0
+wsproto==1.2.0
