--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,15 @@ click-plugins==1.1.1
 click-repl==0.3.0
 coverage==7.3.2
 crispy-bootstrap4==2022.1
+cron-descriptor==1.4.5
 data==0.4
 decorator==5.1.1
 Django==5.0.6
+django-celery-beat==2.7.0
 django-crispy-forms==2.0
 django-extensions==3.2.3
 django-phonenumber-field==8.0.0
+django-timezone-field==7.0
 djangorestframework==3.15.1
 dnspython==2.4.2
 easy-thumbnails==2.8.5
@@ -52,6 +55,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 PySocks==1.7.1
+python-crontab==3.2.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 redis==5.0.1
