add in docker-compose.yml celery-beat

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,18 @@ services:
       - django_project
     command: 'celery -A mysite worker -l info'
 
+  celery-beat:
+    restart: always
+    build: .
+    volumes:
+      - /:/app
+      - static_volume:/django/static
+      -media_volume:/django/media
+    depends_on:
+      -redis
+      -django_project
+    command: 'celery -A mysite beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler'
+
   nginx:
     build:
       dockerfile: ./Dockerfile
