--- a/requirements.txt
+++ b/requirements.txt
@@ -28,13 +28,16 @@ dnspython==2.4.2
 easy-thumbnails==2.8.5
 et-xmlfile==1.1.0
 eventlet==0.33.3
+exceptiongroup==1.2.2
 executing==2.0.1
+flower==2.0.1
 funcsigs==1.0.2
 geographiclib==2.0
 geopy==2.4.1
 greenlet==3.0.1
 gunicorn==22.0.0
 h11==0.14.0
+humanize==4.10.0
 idna==3.7
 jedi==0.19.1
 kombu==5.3.2
@@ -47,6 +50,7 @@ patool==1.12
 pexpect==4.9.0
 phonenumbers==8.13.40
 pillow==10.3.0
+prometheus_client==0.20.0
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
@@ -58,6 +62,7 @@ PySocks==1.7.1
 python-crontab==3.2.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2024.1
 redis==5.0.1
 reportlab==4.0.4
 requests==2.32.3
@@ -67,6 +72,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 sqlparse==0.5.0
 stack-data==0.6.3
+tornado==6.4.1
 traitlets==5.14.3
 trio==0.26.0
 trio-websocket==0.11.1
