--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM jwilder/nginx-proxy:1.6
 COPY default_location /etc/nginx/vhost.d/default_location
 
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d
+#RUN rm /etc/nginx/conf.d/default.conf
+#COPY nginx.conf /etc/nginx/conf.d
 #COPY proxy_params /etc/nginx
 
