--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==23.2.0
 billiard==4.1.0
 celery==5.3.4
 certifi==2024.7.4
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
@@ -15,6 +16,7 @@ click-repl==0.3.0
 coverage==7.3.2
 crispy-bootstrap4==2022.1
 cron-descriptor==1.4.5
+cryptography==43.0.3
 data==0.4
 decorator==5.1.1
 Django==5.0.6
@@ -40,6 +42,7 @@ h11==0.14.0
 humanize==4.10.0
 idna==3.7
 jedi==0.19.1
+jwt==1.3.1
 kombu==5.3.2
 matplotlib-inline==0.1.7
 openpyxl==3.1.2
@@ -55,9 +58,11 @@ prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.9.0
 PySocks==1.7.1
 python-crontab==3.2.0
 python-dateutil==2.8.2
@@ -66,6 +71,7 @@ pytz==2024.1
 redis==5.0.1
 reportlab==4.0.4
 requests==2.32.3
+ruff==0.6.8
 selenium==4.22.0
 six==1.16.0
 sniffio==1.3.1
@@ -83,5 +89,3 @@ vine==5.0.0
 wcwidth==0.2.8
 websocket-client==1.8.0
 wsproto==1.2.0
-
-PyJWT~=2.9.0
